# zipfile64

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/zipfile64/: support.py  zipfile.py
tests/: conftest.py  test_support.py  test_zipfile.py
