[project]
name = "zipfile64"
version = "0.1.0"
description = "Adds Deflate64 support to Python's zipfile module"
readme = "README.md"
authors = [
    { name = "Marcel Vingerling", email = "marcel.vingerling@braincreators.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "inflate64>=1.0.4",
]

[project.scripts]
zipfile64 = "zipfile64.zipfile:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
